# synology_dl

./: .gitignore  Makefile  README.md  ds_down.py  icon.icns  main.py  pyproject.toml  setup.py  synology_dl.py
